# mantis

./: .gitignore  .gitmodules  .pr_summary  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  simulation_proper_demo.py  test_a2a_compliance.py  test_adk_a2a_server.py  test_git_gitlab_integration.py  test_real_integration.py
.github/workflows/: ci.yml  publish.yml
agents/cards/: death_persona.json  elon_musk_persona.json  george_soros_persona.json  geth_consensus_channeler_persona.json  hari_seldon_persona.json  jim_simons_persona.json  judgement_persona.json  justice_persona.json  marcus_aurelius_persona.json  mycelial_listener_persona.json  niccolo_machiavelli_persona.json  nurgle_persona.json  oracle_of_delphi_persona.json  peter_drucker_persona.json  shigeru_miyamoto_persona.json  steve_jobs_persona.json  strength_persona.json  sun_tzu_persona.json  temperance_persona.json  the_chariot_persona.json  the_devil_persona.json  the_empress_persona.json  the_fool_persona.json  the_hanged_man_persona.json  the_hermit_persona.json  the_lovers_persona.json  the_moon_persona.json  the_star_persona.json  the_sun_persona.json  the_tower_persona.json  the_world_persona.json  thucydides_persona.json  tzeentch_persona.json  wheel_of_fortune_persona.json
agents/cards/design/: shigeru_miyamoto.json
agents/cards/divination/: carl_jung.json  cleric_of_savras_persona.json  dreamer_of_a_great_old_one_persona.json  geth_consensus_channeler.json  i_ching_reader.json  mycelial_listener.json  octopus.json  odv.json  tarot_reader.json  warlock_of_a_great_old_one_persona.json
agents/cards/finance/: george_soros.json  jim_simons.json  michael_platt.json
agents/cards/foresight/: god_emperor_of_dune.json  hari_seldon.json  matthew_sobol.json
agents/cards/heralds/: alexander_hamilton.json  benjamin_franklin.json  constantine.json  cyrus_the_great.json  deng_xiaoping.json  george_washington.json  lorenzo_de_medici.json  martin_luther.json
agents/cards/implementation/: agent-organizer.json  chief_of_staff.json  context-manager.json
agents/cards/information-science/: claude_shannon.json  edward_tufte.json  john_wheeler.json  marvin_minsky.json  norbert_wiener.json  stuart_kauffman.json
agents/cards/leadership/: andrew_carnegie.json  cornelius_vanderbilt.json  elon_musk.json  j_p_morgan.json  john_d_rockefeller.json  john_malone.json  marcus_aurelius.json  niccolo_machiavelli.json  peter_drucker.json  steve_jobs.json
agents/cards/military-strategy/: alexander_the_great.json  carl_von_clausewitz.json  hannibal_barca.json  heinz_guderian.json  john_boyd.json  napoleon_bonaparte.json  thucydides.json
agents/cards/philosophy/: andy_clark.json  daniel_dennett.json  david_chalmers.json  ludwig_von_mises.json  murray_rothbard.json  nick_bostrom.json  pierre_teilhard_de_chardin.json  ray_kurzweil.json
agents/cards/software-architects/: alan_kay.json  bob_metcalfe.json  bram_cohen.json  butler_lampson.json  chuck_thacker.json  donald_norman.json  douglas_engelbart.json  hal_finney.json  jcr_licklider.json  linus_torvalds.json  nick_szabo.json  satoshi_nakamoto.json  tim_berners_lee.json  vint_cerf.json
agents/prompts/: peter_drucker.md  shigeru_miyamoto.md  sun_tzu.md
agents/prompts/design/: shigeru_miyamoto.md
agents/prompts/divination/: carl_jung.md  geth_consensus_channeler.md  i_ching_reader.md  mycelial_listener.md  octopus.md  odv.md  tarot_reader.md
agents/prompts/finance/: george_soros.md  jim_simons.md  michael_platt.md
agents/prompts/foresight/: god_emperor_of_dune.md  hari_seldon.md  matthew_sobol.md
agents/prompts/heralds/: alexander_hamilton.md  benjamin_franklin.md  constantine.md  cyrus_the_great.md  deng_xiaoping.md  george_washington.md  lorenzo_de_medici.md  martin_luther.md
agents/prompts/implementation/: chief_of_staff.md
agents/prompts/information-science/: claude_shannon.md  edward_tufte.md  john_wheeler.md  marvin_minsky.md  norbert_wiener.md  stuart_kauffman.md
agents/prompts/leadership/: andrew_carnegie.md  cornelius_vanderbilt.md  elon_musk.md  j_p_morgan.md  john_d_rockefeller.md  john_malone.md  marcus_aurelius.md  niccolo_machiavelli.md  steve_jobs.md
agents/prompts/military-strategy/: alexander_the_great.md  carl_von_clausewitz.md  hannibal_barca.md  heinz_guderian.md  john_boyd.md  napoleon_bonaparte.md  thucydides.md
agents/prompts/philosophy/: andy_clark.md  daniel_dennett.md  david_chalmers.md  ludwig_von_mises.md  murray_rothbard.md  nick_bostrom.md  pierre_teilhard_de_chardin.md  ray_kurzweil.md
agents/prompts/software-architects/: alan_kay.md  bob_metcalfe.md  bram_cohen.md  butler_lampson.md  chuck_thacker.md  donald_norman.md  douglas_engelbart.md  hal_finney.md  jcr_licklider.md  linus_torvalds.md  nick_szabo.md  satoshi_nakamoto.md  tim_berners_lee.md  vint_cerf.md
deploy/: Dockerfile.a2a-registry  Dockerfile.agent-server  README.md  nginx-entrypoint.sh  nginx-multiplexed-proxy.conf  nginx-persona-proxy.conf.template  nginx-persona-services.conf  nginx.conf  otel-collector.yml  prometheus.yml
deploy/grafana/dashboards/: mantis-overview.json
docs/: index.md  installation.md  observability.md  prompt-composition-system.md
docs/dev/: changelog.md  contributing.md
docs/reference/: modules.md
docs/user-guide/: overview.md
md/: keystone-agent-prompt.md  mantis_product_requirements_document.md  mantis_system_er_diagram.md  operation-genesis-recursion.md
proto/a2a/v1/: a2a.proto
proto/mantis/v1/: mantis_core.proto  mantis_persona.proto  (+3 more)
scripts/: generate_proto.py  release.py
src/mantis/: __init__.py  __main__.py  config.py
tests/: test_agent_tool_integration.py  test_contextual_prompt.py  test_contextual_prompt_a2a.py  test_fail_fast_behavior.py  test_git_operations_tool.py  test_git_operations_tool_live.py  test_gitlab_tool.py  test_jira_tool.py  test_mantis_service.py  test_orchestrator.py  test_protobuf_integration.py  test_registry_tool.py  test_request_builder.py  test_simulation_output.py  test_web_fetch_tool.py  test_web_fetch_tool_live.py  test_web_search_tool.py  test_web_search_tool_live.py
(+187 files in other folders)
